--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -18,7 +18,7 @@ services:
       DB_PORT: 5432
       DJANGO_SUPERUSER_USERNAME: admin
       DJANGO_SUPERUSER_PASSWORD: admin
-      DJANGO_SUPERUSER_EMAIL: admin@.com
+      DJANGO_SUPERUSER_EMAIL: admin@test.com
 
   db:
     image: postgres:15
